# odontologia-ia

./: .gitignore  Makefile  README.md  SPEC-PRODUCAO-MONOLITICA.md
.github/workflows/: ci.yml
assets/artigos/: catalogados.json
docs/: ARCHITECTURE.md  GUIA-LEITOR.md  ROADMAP.md
livro/: CITATION.cff  Makefile  README-livro.md  README.md  environment.yml  main.tex
livro/apendices/: apendice-a-glossario.tex  apendice-b-referencias-artigos.tex  apendice-c-datasets-publicos.tex  apendice-d-instalacao-ambiente.tex
livro/audits/: _template.md  awesome_ai_in_dentistry_audit.md  dentalmim_audit.md  dentex_audit.md  media_datasets_audit.md  meshsegnet_audit.md  mlua_audit.md  odontoai_audit.md  qinxini_audit.md  toothseg_audit.md
livro/codigos/: apendice-d-instalacao.sh  cap01  cap02  cap03  cap04  cap05  cap10  cap12  cap13  cap14  cap15  cap16  cap17  requirements.txt
livro/config/: comandos.tex  design-aberturas.tex  design-caixas.tex  design-cores.tex  design-digital.tex  design-fontes.tex  design-margem.tex  design.tex  metadados.tex  pacotes.tex  preambulo.tex
livro/fichamentos/: 00-doi-audit.tex  00-instructions.tex  01-EfficientNet-OPMD.tex  02-CNN-OSCC-Meta.tex  03-DL-Alveolar-Bone.tex  04-Jawbone-Seg-CBCT.tex  (+36 more)
scripts/: setup.sh
src/odontoia-pkg/: LICENSE  README.md  odontoia-pkg  pyproject.toml  requirements.txt  setup.py
src/odontoia-pkg/notebooks/: 01_intro_colab.ipynb  02_classificacao_lesoes.ipynb  03_segmentacao_dental.ipynb  04_periodontia_ml.ipynb  05_gradcam.ipynb  06_gemeo_digital.ipynb  07_rag_odontologico.ipynb
src/odontoia-pkg/src/odontoia/: __init__.py
src/odontoia-pkg/src/odontoia/data/: __init__.py  augment.py  datasets.py  loader.py  preprocessing.py
src/odontoia-pkg/src/odontoia/metrics/: __init__.py  classification.py  segmentation.py  stats.py
src/odontoia-pkg/src/odontoia/models/: __init__.py  cnn.py  dental_ml.py  detection.py  digital_twin.py  segmentation.py
src/odontoia-pkg/src/odontoia/sdd/: __init__.py  spec.py  validator.py
src/odontoia-pkg/src/odontoia/tdd/: __init__.py  test_helpers.py
src/odontoia-pkg/src/odontoia/visualization/: __init__.py  gradcam.py  report.py  roc.py
src/odontoia-pkg/tests/: test_data.py  test_metrics.py  test_models.py  test_preprocessing.py  test_sdd.py
(+68 files in other folders)
